--- a/LIBRARY_MANAGEMENT/home.html
+++ b/LIBRARY_MANAGEMENT/home.html
@@ -27,24 +27,12 @@
             <p class="navbar-links"><a href="home.html">HOME </p>
             <p class="navbar-links"><a href="books.html">BOOKS </p>
             <p class="navbar-links"><a href="author.html">AUTHORS </p>
-            <p class="navbar-links"><a href="about.html">AUTHORS </p>
+            <p class="navbar-links"><a href="contact.html">CONTACT</p>
         </div>
-        <div class="toggle" onclick="showbar(event)">
-        <i class="fa-solid fa-bars"></i>
-          </div>
+       
         </nav>
-        <!-- side navbar -->
-        <div class="side-navbar" onclick="closebar(event)">
-            <p style="text-align:right;">
-                <i class="fa-solid fa-xmark"></i>
-            </p>
-            <div class="side-navbar-links">
-                <p class="side-navbar-links"><a href="home.html">HOME</a> </p>
-                <p class="side-navbar-links"><a href="books.html">BOOKS</a> </p>
-                <p class="side-navbar-links"><a href="author.html">Authors</a> </p>
-                <p class="side-navbar-links"><a href="Contact.html">CONTACT</a> </p>
-            </div>
-        </div>
+      
+
 <!-- header -->
  <div class="header">
     <div class="header-content">
